--- a/people.html
+++ b/people.html
@@ -61,9 +61,13 @@
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+      <img class="w3-image bioimage" src="images/MarkHeadshot.jpg"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
-      <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
+        mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
+        followed them, guiding and nature interpreting in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
+        showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.
+      </p>
     </div>
     <div class= "bioblock">
       <!-- edited by Kazuto-->
@@ -94,9 +98,12 @@
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
-      <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+      <img class="w3-image" src="images/MarkHeadshot.jpg"  alt="Test Image" width="200" height="300">
       <h4>Mark</h4>
-      <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
+        mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
+        followed them, guiding and nature interpreting in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
+        showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.</p>
     </div>
     <div class= "bioblock">
       <!-- edited by Kazuto-->
