--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 <body>
 <!-- Owner: Kate -->
   <!-- Navbar -->
-  <div class="w3-top">
-    <div class="w3-bar w3-card w3-left-align w3-large w3-white">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-blue w3-large w3-white"  onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-      <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
-      <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
+  <div class="top">
+    <div class="bar card left-align large white">
+      <a class="bar-item button hide-medium hide-large right padding-large hover-blue large white"  onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
+      <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
+      <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
 
     </div>
   <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
   <!-- Navbar on small screens -->
-    <div class='w3-right'>
-      <div id="SmallNavBar" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium w3-large">
-        <a href="people.html" class="w3-show w3-button w3-padding-large">People</a>
-        <a href="projects.html" class="w3-show w3-button w3-padding-large">Projects</a>
+    <div class='right'>
+      <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
+        <a href="people.html" class="show button padding-large">People</a>
+        <a href="projects.html" class="show button padding-large">Projects</a>
       </div>
     </div>
     <!-- end of Kazuto edit-->
@@ -40,22 +40,22 @@
 <!--End of Owner: Kate -->
 
   <!-- Header -->
-  <header class="w3-container w3-center w3-padding-62-16">
-    <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
-    <div class="w3-display-middle">
+  <header class="container center padding-62-16">
+    <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
+    <div class="display-middle">
       <!-- Owner: Kate -->
-      <h1 class="headertext w3-margin">Cloud 9 Consulting</h1>
-      <p class="center-align w3-xlarge">GIS Solutions</p>
+      <h1 class="headertext margin">Cloud 9 Consulting</h1>
+      <p class="center-align xlarge">GIS Solutions</p>
     </div>
   </header>
 
   <!-- Owner: Kate -->
   <!-- First Grid -->
-  <div class="w3-container">
-    <div class="w3-content">
+  <div class="container">
+    <div class="content">
       <div>
         <h1>Welcome</h1>
-        <h5>sub heading</h5>
+        <!--h5>sub heading</h5-->
 
         <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
           private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
@@ -64,7 +64,7 @@
         </p>
       </div>
 
-      <div class="w3-center">
+      <div class="center">
         <i></i>
       </div>
     </div>
@@ -72,15 +72,15 @@
   <!-- End of Kate -->
 
   <!-- Second Grid -->
-  <div class="w3-light-grey w3-container">
-    <div class="w3-content">
-      <div class="w3-center">
-        <i class="w3-margin-right"></i>
+  <div class="light-grey container">
+    <div class="content">
+      <div class="center">
+        <i class="margin-right"></i>
       </div>
 
       <div>
         <h1>About Us</h1>
-        <h5 class="w3-padding-32">sub heading</h5>
+        <!--h5 class="padding-32">sub heading</h5-->
 
         <p>Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
           founders have extensive backgrounds in the fields of geology and ecology, and bring this expertise to each consulting project. 
@@ -90,15 +90,15 @@
   </div>
 
   <!-- Third Grid -->
-  <div class="w3-container">
-      <div class="w3-content">
-        <div class="w3-center">
-          <i class="w3-margin-right"></i>
+  <div class="container">
+      <div class="content">
+        <div class="center">
+          <i class="margin-right"></i>
         </div>
     
         <div>
           <h1>Page 3</h1>
-          <h5>Sub heading</h5>
+          <!--h5>Sub heading</h5-->
     
           <p>Example paragraph</p>
 
@@ -107,13 +107,13 @@
     </div>
 
 
-  <div class="w3-container w3-black w3-center">
-      <h1 class="w3-margin w3-xlarge">Footer</h1>
+  <div class="container black center">
+      <h1 class="margin xlarge">Footer</h1>
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-center">  
-    <div class="w3-xlarge">
+  <footer class="container center">  
+    <div class="xlarge">
     </div>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
