Projects - bit more content

--- a/projects.html
+++ b/projects.html
@@ -270,7 +270,8 @@
         <p>
           <ul>
             <li>Can explain the different between spheroids, ellipsoids, and geoids</li>
-            <li>I need to catch up on the last week of class, to see what else we can do</li>
+            <li>Effective application of projections and datums</li>
+            <li>Geocorrection of old maps to new datums</li>
           </ul>
         </p>
       </div>
@@ -313,7 +314,7 @@
       <div class="padding-bottom">
         <h1 class='anchor'>Programming and Automation</h1>
         <ul>
-          <li>Python programming, applied to GIS or perhaps elsewhere</li>
+          <li>Python programming to automate GIS solutions</li>
         </ul>
       </div>
     </div>
@@ -325,6 +326,7 @@
       <div>
         <h1 class='anchor'>Surveying</h1>
         <ul>
+          <li>Conduct cadastral surveys</li>
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
       </div>
