--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
   <!-- Navbar on small screens -->
-    <div class='right'>
+    <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show button padding-large">People</a>
         <a href="projects.html" class="show button padding-large">Projects</a>
