--- a/people.html
+++ b/people.html
@@ -27,7 +27,7 @@
     </div>
   <!-- modified by Kazuto-->
   <!-- Navbar on small screens -->
-    <div class='right'>
+    <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show burger-item padding-large">People</a>
         <a href="projects.html" class="show burger-item padding-large">Projects</a>
