add burger class on index nav bar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navbar -->
   <div class="top">
     <div class="bar card left-align large white">
-      <a class="bar-item button hide-medium hide-large right padding-large hover-blue large white"  onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a class="burger button hide-medium hide-large right padding-large hover-blue large white"  onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
       <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
       <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
