change to text and footer on index

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
   <div class="container">
     <div class="content">
       <div>
-        <h1>Welcome</h1>
-        <!--h5>sub heading</h5-->
+        <h2>Welcome</h2>
 
         <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
           private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
           Spatial Analysis, and Cartographic Solutions. For our full range of services and examples of past projects please visit our
-          projects page.
+          projects page. Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
+          founders have extensive backgrounds in the fields of geology and ecology, and bring this expertise to each consulting project. 
         </p>
       </div>
 
@@ -82,8 +82,7 @@
         <h1>About Us</h1>
         <!--h5 class="padding-32">sub heading</h5-->
 
-        <p>Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
-          founders have extensive backgrounds in the fields of geology and ecology, and bring this expertise to each consulting project. 
+        <p>
         </p>
       </div>
     </div>
@@ -107,7 +106,7 @@
     </div>
 
 
-  <div class="container black center">
+  <div class="container blue center">
       <h1 class="margin xlarge">Footer</h1>
   </div>
 
