--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     </div>
 
 
-  <div class="container blue center">
-      <h1 class="margin xlarge">Footer</h1>
+  <div class="container light-grey center">
+      <h1 class="margin xlarge"></h1>
   </div>
 
   <!-- Footer -->
