People fixed Mark alt

--- a/people.html
+++ b/people.html
@@ -61,7 +61,7 @@
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/MarkHeadshot.jpg"  alt="Test Image" width="200" height="300">
+      <img class="w3-image bioimage" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
         mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
@@ -98,7 +98,7 @@
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
-      <img class="w3-image" src="images/MarkHeadshot.jpg"  alt="Test Image" width="200" height="300">
+      <img class="w3-image" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
         mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
