remove two grids on index page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
 
   <!-- Owner: Kate -->
-  <!-- First Grid -->
+  <!-- Content Grid -->
   <div class="container">
     <div class="content">
       <div>
@@ -69,42 +69,7 @@
       </div>
     </div>
   </div>
-  <!-- End of Kate -->
-
-  <!-- Second Grid -->
-  <div class="light-grey container">
-    <div class="content">
-      <div class="center">
-        <i class="margin-right"></i>
-      </div>
-
-      <div>
-        <h1>About Us</h1>
-        <!--h5 class="padding-32">sub heading</h5-->
-
-        <p>
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Third Grid -->
-  <div class="container">
-      <div class="content">
-        <div class="center">
-          <i class="margin-right"></i>
-        </div>
-    
-        <div>
-          <h1>Page 3</h1>
-          <!--h5>Sub heading</h5-->
-    
-          <p>Example paragraph</p>
-
-        </div>
-      </div>
-    </div>
-
+  
 
   <div class="container light-grey center">
       <h1 class="margin xlarge"></h1>
