change alignment of index text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- Owner: Kate -->
   <!-- Content Grid -->
   <div class="container">
-    <div class="content">
+    <div class="content text-centered">
       <div>
         <h2>Welcome</h2>
 
