Projects alts for icons

--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
     <!-- Kate - December 1, 2020 -->
     <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
     <!-- menu for large screen-->
+    <!--modified by Mark Dec 4, 2020-->
   <div class='content center hide-medium hide-small'>
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
@@ -60,16 +61,16 @@
 
     <div class='flex'>
       <a href='#webdesign' class='quarterWidth '>
-        <img src='images/icons_webdesign125.png' width='125' height='110'>        
+        <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
       </a>
       <a href='#geovis' class='quarterWidth '>
-        <img src='images/icons_geovis125.png' width='125' height='100'>    
+        <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
       </a>
       <a href='#spatial' class='quarterWidth '>
-        <img src='images/icons_spatial125.png' width='125' height='103'>
+        <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
       </a>
       <a href='#geodesy' class='quarterWidth '>
-       <img  src='images/icons_geodesy125.png' width='125' height='120'>
+       <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
       </a>
     </div>
 
@@ -82,16 +83,16 @@
 
     <div class='flex'>
       <a href='#database' class='quarterWidth '> 
-        <img src='images/icons_database125.png' width='125' height='100'>
+        <img src='images/icons_database125.png' alt='database icons' width='125' height='100'>
       </a> 
       <a href='#remote' class = 'quarterWidth '>
-        <img src='images/icons_remote125.png' width='125' height='119'>
+        <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
       </a>
       <a href='#programming' class='quarterWidth'>
-        <img src='images/icons_programming125.png' width='125' height='90'>
+        <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
       </a>
       <a href='#survey' class='quarterWidth '>
-        <img src='images/icons_survey125.png' width='125' height='126'>
+        <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
       </a>
     </div>
   </div>
@@ -108,13 +109,13 @@
 
   <div class='flex hide-large hide-small'>
     <a href='#webdesign' class='thirdWidth '>
-      <img src='images/icons_webdesign125.png' width='125' height='110'>        
+      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
     </a>
     <a href='#geovis' class='thirdWidth '>
-      <img src='images/icons_geovis125.png' width='125' height='100'>    
+      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
     </a>
     <a href='#spatial' class='thirdWidth '>
-      <img src='images/icons_spatial125.png' width='125' height='103'>
+      <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
     </a>
   </div>
 
@@ -126,13 +127,13 @@
 
   <div class='flex hide-large hide-small'>
     <a href='#geodesy' class='thirdWidth '>
-      <img  src='images/icons_geodesy125.png' width='125' height='120'>
+      <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
     </a>
     <a href='#database' class='thirdWidth '> 
-      <img src='images/icons_database125.png' width='125' height='100'>
+      <img src='images/icons_database125.png' alt='database icon' width='125' height='100'>
     </a> 
     <a href='#remote' class = 'thirdWidth '>
-      <img src='images/icons_remote125.png' width='125' height='119'>
+      <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
     </a>
   </div>
 
@@ -144,10 +145,10 @@
 
   <div class='flex hide-large hide-small'>
     <a href='#programming' class='halfWidth'>
-      <img src='images/icons_programming125.png' width='125' height='90'>
+      <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
     </a>
     <a href='#survey' class='halfWidth'>
-      <img src='images/icons_survey125.png' width='125' height='126'>
+      <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
     </a>
   </div>
 </div>
@@ -162,10 +163,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#webdesign' class='halfWidth '>
-      <img src='images/icons_webdesign125.png' width='125' height='110'>        
+      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
     </a>
     <a href='#geovis' class='halfWidth '>
-      <img src='images/icons_geovis125.png' width='125' height='100'>    
+      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
     </a>
   </div>
 
@@ -176,10 +177,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#spatial' class='halfWidth '>
-      <img src='images/icons_spatial125.png' width='125' height='103'>
+      <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
     </a>
     <a href='#geodesy' class='halfWidth '>
-      <img  src='images/icons_geodesy125.png' width='125' height='120'>
+      <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
     </a>
   </div>
 
@@ -190,10 +191,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#database' class='halfWidth '> 
-      <img src='images/icons_database125.png' width='125' height='100'>
+      <img src='images/icons_database125.png' alt='three databases icon' width='125' height='100'>
     </a> 
     <a href='#remote' class = 'halfWidth '>
-      <img src='images/icons_remote125.png' width='125' height='119'>
+      <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
     </a>
   </div> 
 
@@ -203,11 +204,11 @@
   </div>
 
   <div class='flex hide-large hide-medium'>
-    <a href='#programming' class='halfWidth width='125''>
-      <img src='images/icons_programming125.png' width='125' height='90'>
+    <a href='#programming' class='halfWidth' width='125'>
+      <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
     </a>
     <a href='#survey' class='halfWidth '>
-      <img src='images/icons_survey125.png' width='125' height='126'>
+      <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
     </a>
   </div>
 </div>
