updates to style of image gallery

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
           Spatial Analysis, and Cartographic Solutions. For our full range of services and examples of past projects please visit our
           projects page. Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
-          founders have extensive backgrounds in the fields of geology and ecology, and bring this expertise to each consulting project. 
+          founders have extensive backgrounds in the fields of geology and biology, and bring this expertise to each consulting project. 
         </p>
       </div>
       
