changes to javascript and images

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       
       <div>
         <div>
-          <a id="image1" href="projects.html#geovis" onmouseover=imagechange1()>
-            <img src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237">
+          <a href="projects.html#geovis" onmouseover=imagechange1()>
+            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237">
           </a>
           <div>Cartographic Solutions</div>
         </div>
