--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       
       <div>
         <div>
-          <a href="projects.html#geovis" onmouseover=imagechange1()>
-            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237">
+          <a href="projects.html#geovis">
+            <img src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" onmouseover="this.src='images/surveyplan_400_252.jpg'" onmouseout="this.src'images/cartography_400_237.jpg'">
           </a>
           <div>Cartographic Solutions</div>
         </div>
