--- a/people.html
+++ b/people.html
@@ -65,7 +65,7 @@
       <h4>Mark</h4>
       <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
         mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
-        followed them, guiding and nature interpreting in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
+        followed them, guiding tourists in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
         showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.
       </p>
     </div>
@@ -102,7 +102,7 @@
       <h4>Mark</h4>
       <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
         mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
-        followed them, guiding and nature interpreting in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
+        followed them, guiding tourists in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
         showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.</p>
     </div>
     <div class= "bioblock">
