move mouseover js to js file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <div>
           <a href="projects.html#geovis">
-            <img src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" onmouseover="this.src='images/surveyplan_400_252.jpg'" onmouseout="this.src='images/cartography_400_237.jpg'">
+            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237">
           </a>
           <div>Cartographic Solutions</div>
         </div>
