javascript, css, and html changes for image rollover on index page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <div>
           <a href="projects.html#geovis">
-            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237">
+            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" class="hoverImage">
           </a>
           <div>Cartographic Solutions</div>
         </div>
@@ -75,8 +75,8 @@
       
       <div>
         <div>
-          <a id="image2" href="projects.html#survey">
-            <img src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252">
+          <a href="projects.html#survey">
+            <img id="image2" src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252" class="hoverImage">
           </a>
           <div>Autocad Mapping</div>
         </div>
@@ -84,8 +84,8 @@
       
       <div>
         <div>
-          <a id="image3" href="projects.html#database">
-            <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207">
+          <a href="projects.html#database">
+            <img id="image3"src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
           </a>
           <div>Geodatabase Design</div>
         </div>
