--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <div>
           <a href="projects.html#geovis">
-            <img id="image1" src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" class="hoverImage">
+            <img src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" class="hoverImage">
           </a>
           <div>Cartographic Solutions</div>
         </div>
@@ -76,7 +76,7 @@
       <div>
         <div>
           <a href="projects.html#survey">
-            <img id="image2" src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252" class="hoverImage">
+            <img src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252" class="hoverImage">
           </a>
           <div>Autocad Mapping</div>
         </div>
@@ -85,7 +85,7 @@
       <div>
         <div>
           <a href="projects.html#database">
-            <img id="image3"src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
+            <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
           </a>
           <div>Geodatabase Design</div>
         </div>
