--- a/projects.html
+++ b/projects.html
@@ -303,6 +303,7 @@
           <ul>
             <li>Georeferencing of imagery</li>
             <li>Filtering</li>
+            <li>Image Classification</li>
           </ul>
         </p>
       </div>
