Projects Format Update

--- a/projects.html
+++ b/projects.html
@@ -51,55 +51,47 @@
     <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
     <!-- menu for large screen-->
     <!--modified by Mark Dec 4, 2020-->
-  <div class='content center hide-medium hide-small'>
+  <div class='content center hide-small'>
     <div class='flex'>
-      <div class='quarterWidth'>Web Design</div>
-      <div class='quarterWidth'>Geovisualization</div>
-      <div class='quarterWidth'>Spatial Analysis</div>
-      <div class='quarterWidth'>Geodesy</div>
+      <div class='thirdWidth'>Spatial Analysis</div>
+      <div class='thirdWidth'>Geovisualization</div>
+      <div class='thirdWidth'>Database Modeling</div>
     </div>
 
     <div class='flex'>
-      <a href='#webdesign' class='quarterWidth '>
-        <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
-      </a>
-      <a href='#geovis' class='quarterWidth '>
-        <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
-      </a>
-      <a href='#spatial' class='quarterWidth '>
+      <a href='#spatial' class='thirdWidth '>
         <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
       </a>
-      <a href='#geodesy' class='quarterWidth '>
-       <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
+      <a href='#geovis' class='thirdWidth '>
+        <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
       </a>
-    </div>
-
-    <div class='flex'>
-      <div class='quarterWidth'>Database Modeling</div>
-      <div class='quarterWidth'>Remote Sensing</div>
-      <div class='quarterWidth'>Programming and Automation</div>
-      <div class='quarterWidth'>Surveying</div>
-    </div>
-
-    <div class='flex'>
-      <a href='#database' class='quarterWidth '> 
+      <a href='#database' class='thirdWidth '> 
         <img src='images/icons_database125.png' alt='database icons' width='125' height='100'>
       </a> 
-      <a href='#remote' class = 'quarterWidth '>
+    </div>
+
+    <div class='flex'>
+      <div class='thirdWidth'>Remote Sensing</div>
+      <div class='thirdWidth'>Surveying</div>
+      <div class='thirdWidth'>Web Design</div>
+    </div>
+
+    <div class='flex'>
+      <a href='#remote' class = 'thirdWidth'>
         <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
       </a>
-      <a href='#programming' class='quarterWidth'>
-        <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
-      </a>
-      <a href='#survey' class='quarterWidth '>
+      <a href='#survey' class='thirdWidth'>
         <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
+      </a>
+      <a href='#webdesign' class='thirdWidth'>
+        <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
       </a>
     </div>
   </div>
 
 <!-- end menu large screen-->
 <!--Mark December 5-->
-<!-- menu medium screen-->
+<!-- menu medium screen
 <div class='content center hide-large hide-small'>
   <div class='flex hide-large hide-small'>
     <div class='thirdWidth'>Web Design</div>
@@ -152,35 +144,21 @@
     </a>
   </div>
 </div>
-<!-- end menu medium screen-->
+end menu medium screen-->
 
 <!-- menu on small screen-->
 <div class='content center hide-large hide-medium'>
   <div class='flex hide-large hide-medium'>
-    <div class='halfWidth'>Web Design</div>
-    <div class='halfWidth'>Geovisualization</div>
-  </div>
-
-  <div class='flex hide-large hide-medium'>
-    <a href='#webdesign' class='halfWidth '>
-      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
-    </a>
-    <a href='#geovis' class='halfWidth '>
-      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
-    </a>
-  </div>
-
-  <div class='flex hide-large hide-medium'>
     <div class='halfWidth'>Spatial Analysis</div>
-    <div class='halfWidth'>Geodesy</div>
+    <div class='halfWidth'>Geovisualization</div>
   </div>
 
   <div class='flex hide-large hide-medium'>
     <a href='#spatial' class='halfWidth '>
       <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
     </a>
-    <a href='#geodesy' class='halfWidth '>
-      <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
+    <a href='#geovis' class='halfWidth '>
+      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
     </a>
   </div>
 
@@ -199,52 +177,21 @@
   </div> 
 
   <div class='flex hide-large hide-medium'>
-    <div class='halfWidth'>Programming and Automation</div>
     <div class='halfWidth'>Surveying</div>
+    <div class='halfWidth'> Web Design</div>
   </div>
 
   <div class='flex hide-large hide-medium'>
-    <a href='#programming' class='halfWidth' width='125'>
-      <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
-    </a>
     <a href='#survey' class='halfWidth '>
       <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
+    </a>
+    <a href='#webdesign' class='halfWidth '>
+      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
     </a>
   </div>
 </div>
 <!--end menu small screen-->
 <!--end Mark-->
-
-  <!-- GEOM 101-->
-  <div class="container" id='webdesign'>
-    <div class="content">
-      <div class="padding-bottom">
-        <h1 class='anchor'>Web Design</h1>
-        <p>
-          <ul>
-            <li>Website design even more impressive than this one</li>
-            <li>Responsive websites for desktop and mobile environments</li>
-          </ul>
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <!-- GEOM 102-->
-  <div class="light-grey container" id='geovis'>
-    <div class="content">
-      <div class="padding-bottom">
-        <h1 class='anchor'>Geovisualization</h1>
-        <p>
-          <ul>
-            <li>Reference or Thematic mapping solutions</li>
-            <li>Suitable for reports, presentations, or displays</li>
-            <li>Physical or digital medium</li>
-          </ul>
-        </p>
-      </div>
-    </div>
-  </div>
 
   <!-- GEOM 103-->
   <div class="container" id='spatial'>
@@ -263,16 +210,16 @@
     </div>
   </div>
 
-  <!-- GEOM 104-->
-  <div class="light-grey container" id='geodesy'>
+  <!-- GEOM 102-->
+  <div class="light-grey container" id='geovis'>
     <div class="content">
       <div class="padding-bottom">
-        <h1 class='anchor'>Geodesy</h1>
+        <h1 class='anchor'>Geovisualization</h1>
         <p>
           <ul>
-            <li>Can explain the different between spheroids, ellipsoids, and geoids</li>
-            <li>Effective application of projections and datums</li>
-            <li>Geocorrection of old maps to new datums</li>
+            <li>Reference or Thematic mapping solutions</li>
+            <li>Suitable for reports, presentations, or displays</li>
+            <li>Physical or digital medium</li>
           </ul>
         </p>
       </div>
@@ -310,20 +257,8 @@
     </div>
   </div>
 
-  <!-- GEOM 67-->
-  <div class="container" id='programming'>
-    <div class="content">
-      <div class="padding-bottom">
-        <h1 class='anchor'>Programming and Automation</h1>
-        <ul>
-          <li>Python programming to automate GIS solutions</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
   <!-- SURV 21-->
-  <div class="light-grey container bottom-anchor" id='survey'>
+  <div class="container bottom-anchor" id='survey'>
     <div class="content">
       <div>
         <h1 class='anchor'>Surveying</h1>
@@ -331,6 +266,21 @@
           <li>Conduct cadastral surveys</li>
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- GEOM 101-->
+  <div class="light-grey container" id='webdesign'>
+    <div class="content">
+      <div class="padding-bottom">
+        <h1 class='anchor'>Web Design</h1>
+        <p>
+          <ul>
+            <li>Website design even more impressive than this one</li>
+            <li>Responsive websites for desktop and mobile environments</li>
+          </ul>
+        </p>
       </div>
     </div>
   </div>
