javascript onmouseover and out

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <div>
           <a href="projects.html#geovis">
-            <img src="images/cartography_400_237.jpg" alt="Cartographic solutions" width="400" height="237" class="hoverImage">
+            <img id="image1" src="images/cartography_400_237.jpg" onmouseover="newImage()" onmouseout="originalImage()" alt="Cartographic solutions" width="400" height="237">
           </a>
           <div>Cartographic Solutions</div>
         </div>
@@ -76,7 +76,7 @@
       <div>
         <div>
           <a href="projects.html#survey">
-            <img src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252" class="hoverImage">
+            <img src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252">
           </a>
           <div>Autocad Mapping</div>
         </div>
