updates to index images and js

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <div>
           <a href="projects.html#geovis">
-            <img id="image1" src="images/cartography_400_237.jpg" onmouseover="newImage()" onmouseout="originalImage()" alt="Cartographic solutions" width="400" height="237">
+            <img id="image1" src="images/cartography_400_237.jpg" onmouseover="newImage1()" onmouseout="originalImage1()" alt="Cartographic solutions" width="400" height="237">
           </a>
           <div>Cartographic Solutions</div>
         </div>
@@ -76,7 +76,7 @@
       <div>
         <div>
           <a href="projects.html#survey">
-            <img src="images/surveyplan_400_252.jpg" alt="Autocad Mapping" width="400" height="252">
+            <img src="images/surveyplan_400_252.jpg" onmouseover="newImage2()" onmouseout="originalImage2()" alt="Autocad Mapping" width="400" height="252">
           </a>
           <div>Autocad Mapping</div>
         </div>
@@ -85,7 +85,7 @@
       <div>
         <div>
           <a href="projects.html#database">
-            <img src="images/databasedesign_400_207.jpg" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
+            <img src="images/databasedesign_400_207.jpg" onmouseover="newImage3()" onmouseout="originalImage3()" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
           </a>
           <div>Geodatabase Design</div>
         </div>
