"GIS Solutions" in the title will now hide when the screen is smaller than 992px

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="display-middle">
       <!-- Owner: Kate -->
       <h1 class="headertext margin">Cloud 9 Consulting</h1>
-      <p class="center-align xlarge">GIS Solutions</p>
+      <p class="hide-medium hide-small center-align xlarge">GIS Solutions</p>
     </div>
   </header>
 
