added comments about edits Kazuto made

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="projects.html" class="bar-item button hide-small padding-large hover-white">Projects</a>
 
     </div>
-  <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
+  <!-- modified by Kazuto -->
   <!-- Navbar on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
@@ -44,8 +44,10 @@
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="display-middle">
       <!-- Owner: Kate -->
+      <!-- modified by Kazuto-->
       <h1 class="headertext margin">Cloud 9 Consulting</h1>
       <p class="hide-medium hide-small center-align xlarge">GIS Solutions</p>
+      <!-- end of Kazuto modification-->
     </div>
   </header>
 
