--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,7 @@
     <!-- inspiration from http://tresreistech.com/gis-consulting-and-services/-->
     <!-- menu for large screen-->
     <!--modified by Mark Dec 4, 2020-->
+  <!-- owner: Kazuto-->
   <div class='content center hide-small'>
     <div class='flex'>
       <div class='thirdWidth'>Spatial Analysis</div>
@@ -88,6 +89,7 @@
       </a>
     </div>
   </div>
+  <!-- end Kazuto ownership-->
 
 <!-- end menu large screen-->
 <!--Mark December 5-->
