add id on each image tag

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div>
         <div>
           <a href="projects.html#survey">
-            <img src="images/surveyplan_400_252.jpg" onmouseover="newImage2()" onmouseout="originalImage2()" alt="Autocad Mapping" width="400" height="252">
+            <img id="image2" src="images/surveyplan_400_252.jpg" onmouseover="newImage2()" onmouseout="originalImage2()" alt="Autocad Mapping" width="400" height="252">
           </a>
           <div>Autocad Mapping</div>
         </div>
@@ -87,7 +87,7 @@
       <div>
         <div>
           <a href="projects.html#database">
-            <img src="images/databasedesign_400_207.jpg" onmouseover="newImage3()" onmouseout="originalImage3()" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
+            <img id="image3" src="images/databasedesign_400_207.jpg" onmouseover="newImage3()" onmouseout="originalImage3()" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
           </a>
           <div>Geodatabase Design</div>
         </div>
