edit format of index page

--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
           founders have extensive backgrounds in the fields of geology and biology, and bring this expertise to each consulting project. 
         </p>
       </div>
-      
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="content text-centered">
+      <div>
         <h2>How can we help?</h2>
-
       <div>
         <div>
           <a href="projects.html#geovis">
@@ -91,7 +95,8 @@
           </a>
         </div>
       </div>
-  
+    </div>
+  </div>
 
   <div class="container light-grey center">
       <h1 class="margin xlarge"></h1>
