--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   </div>
   
-  <div class="container">
+  <div class="container light-grey center">
     <div class="content text-centered">
       <div>
         <h2>How can we help?</h2>
