--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div>
         <div class="padding-large">
           <a href="projects.html#geovis">
-            <img id="image1" src="images/cartography_400_237.jpg" onmouseover="newImage1()" onmouseout="originalImage1()" alt="Cartographic solutions" width="400" height="237">
+            <img id="image1" src="images/cartography_400_237.jpg" onmouseover="newImage1()" onmouseout="originalImage1()" alt="Cartographic solutions" class="responsive">
           </a>
         </div>
       </div>
@@ -83,7 +83,7 @@
       <div>
         <div class="padding-large">
           <a href="projects.html#survey">
-            <img id="image2" src="images/surveyplan_400_252.jpg" onmouseover="newImage2()" onmouseout="originalImage2()" alt="Autocad Mapping" width="400" height="252">
+            <img id="image2" src="images/surveyplan_400_252.jpg" onmouseover="newImage2()" onmouseout="originalImage2()" alt="Autocad Mapping" class="responsive">
           </a>
         </div>
       </div>
@@ -91,7 +91,7 @@
       <div>
         <div class="padding-large">
           <a href="projects.html#database">
-            <img id="image3" src="images/databasedesign_400_207.jpg" onmouseover="newImage3()" onmouseout="originalImage3()" alt="Geodatabase Design" width="400" height="207" class="hoverImage">
+            <img id="image3" src="images/databasedesign_400_207.jpg" onmouseover="newImage3()" onmouseout="originalImage3()" alt="Geodatabase Design" class="responsive">
           </a>
         </div>
       </div>
