created a test "Contact Info" box for Kate. Cleaned up the code in people.html by making it so that we don't have to have two duplicate bio paragraphs

--- a/people.html
+++ b/people.html
@@ -47,17 +47,23 @@
 
 <!--Mark edit Dec 1 2020-->
 <!-- bios on larger screens-->
-<div class='content center hide-small'>
+<div class='content content-mobile center'>
   <div class='flex-people'>
     <div class= "bioblock">
       <!-- edited by Kate -->
       <img class="image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
+
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
         salty. Kate spent 11 days in the desert, collecting 50 rocks for a 300 page thesis which would take her 2.5 years and one
         dangerous lab accident to complete. She is now pursuing a career in GIS to distance herself from deadly chemicals and to instead
         spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
         When Kate grows up she hopes to become a GIS Applications Specialist.</p>
+        
+      <div class='dropBox'>
+        <button onclick='dropdown()' class='dropContact'>Contact Information</button>
+        <div id='kateEmail' class='emailBox'>kate@email.com</div>
+      </div>
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
@@ -83,41 +89,6 @@
   </div>
 </div> 
 
-<!-- bios on small screens-->
-<div class='content-mobile center hide-large hide-medium'>
-  <div class='flex-people'>
-    <div class= "bioblock">
-      <!-- Edited by Kate -->
-      <img class="image " src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
-      <h4>Kate</h4>
-      <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
-        salty. Kate spent 11 days in the desert, collecting 50 rocks for a 300 page thesis which would take her 2.5 years and one
-        dangerous lab accident to complete. She is now pursuing a career in GIS to distance herself from deadly chemicals and to instead
-        spend all of her time sitting behind a computer. Just like Carbon, Kate shines under pressure. 
-        When Kate grows up she hopes to become a GIS Applications Specialist.</p>
-    </div>
-    <!-- End of Kate edits -->
-    <div class= "bioblock">
-      <img class="w3-image" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
-      <h4>Mark</h4>
-      <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
-        mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
-        followed them, guiding tourists in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
-        showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.</p>
-    </div>
-    <div class= "bioblock">
-      <!-- edited by Kazuto-->
-      <img class="image" src="images/KazutoHeadshot2.jpg"  alt="Test Image" width="200" height="300">
-      <h4>Kazuto</h4>
-      <p class="biotext">Kazuto received a BSc in geology from Queen's University and has 3 years of experience in the mineral exploration industry. 
-        Recently he has discovered a passion for programming and GIS, mainly because you can avoid being eaten alive by blackflies if you are indoors.
-        Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small 
-        puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.</p>
-    </div>
-    <!-- end of Kazuto edit-->
-  </div>
-</div>
-<!-- End Mark edit-->
 
   <div class="container black center">
     <h1 class="margin xlarge">Footer</h1>
