created new class bioimagesmall

--- a/people.html
+++ b/people.html
@@ -51,7 +51,7 @@
   <div class='flex-people'>
     <div class= "bioblock">
       <!-- edited by Kate -->
-      <img class="image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
+      <img class="image bioimage bioimagesmall" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
 
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
